--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
     "stylelint-scss": "^3.21.0",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.3"
+    "webpack-dev-server": "^4.9.3",
+    "jest": "^28.1.3",
+    "@babel/plugin-transform-modules-commonjs": "^7.18.6",
+    "jest-environment-jsdom": "^28.1.3",
+    "jsdom": "^20.0.0"
   }
 }
